--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
     <div id="about-us" class="about-us">
         <div class="abtus-heading">ABOUT US</div>
         <P id="abtus-content">The CAD Club provides students with the opportunity to visualize design ideas using software like CATIA and<br>
-            SOLIDWORKS. Members gain a deeper understanding of design through renderings and simulations to assess real-world<br>
+            SolidWorks Members gain a deeper understanding of design through renderings and simulations to assess real-world<br>
              performance.<br>
             CAD is a key part of Digital Product Development (DPD) within Product Lifecycle Management (PLM) and integrates with <br>
             tools like Computer-Aided Engineering (CAE), Finite Element Analysis (FEA), and Computer-Aided Manufacturing (CAM). It<br>
@@ -688,14 +688,12 @@
         <p id="achievements-content">
             AutoDesk Design Challenge at IIT Kanpur Techfest 2025 (Techkriti)<br>
             where we secured 1st runner up.<br>
-            The team designed a Wheelchair.
         </p>
         <img src="techkriti1.png" id="achievments-image" class="glow-red" width="452px">
 
         <p id="achievements-content">
             AutoDesk Design Challenge at IIT Kanpur Techfest 2025 (Techkriti)<br>
             where we secured 2nd runner up.<br>
-            The team designed a Wheelchair.
         </p>
         <img src="techkriti2.jpg" id="achievments-image" class="glow-red" width="452px"><br><br>
         <h2 style="color: rgba(255,0,0,0.85);">AND MORE...</h2>
@@ -747,7 +745,7 @@
             <h1 class="name">Raj Jain</h1>
         </div>
         <div class="profile" id="pf-3">
-            <h1 class="designation">CO-CORDINATOR</h1>
+            <h1 class="designation">CO-COORDINATOR</h1>
             <hr class="underline" id="ul-3">
             <img src="Krutika mam.jpg" class="pp glow-red">
             <h1 class="name">Krutika Raut</h1>
@@ -870,4 +868,5 @@
     </section>
 </footer>
 </body>
+
 </html> 
